@@ -69,7 +69,7 @@
             @if (Route::has('login'))
                 <div class="top-right links">
                     @auth
-                        <a href="{{ url('/home') }}">Home</a>
+                        <!-- <a href="{{ url('/') }}">Home</a> -->
                     @else
                         <!-- <a href="{{ route('login') }}">Login</a> -->
                         <!-- <a href="{{ route('register') }}">Register</a> -->
