@@ -92,7 +92,12 @@
 
                 <div class="links">
                     <a href="{{ route('register') }}">Registrar Usuario</a>
-                    <a href="{{ route('login') }}">Inicia sesión</a>
+                    @auth
+                      <a href="#">Chequea tu salud</a>
+                    @else
+                      <a href="{{ route('login') }}">Inicia sesión</a>
+                    @endauth
+
                     <a href="https://github.com/sebastian1130/healthIoT">GitHub</a>
                     <!-- <a href="https://forge.laravel.com">Forge</a>
                     <a href="https://github.com/laravel/laravel">GitHub</a> -->
